force-app/main/default/objects/conference360__Hotel_Room_Block__c/conference360__Hotel_Room_Block__c.object-meta.xml
<CustomObject>
    <label>Hotel Room Block</label>
    <nameField>
        <displayFormat>HRB-{000000}</displayFormat>
        <label>Hotel Room Block Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Room Block</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>