force-app/main/default/objects/conference360__Hotel_Room_Block__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Event related to this Room Block.</description>
    <inlineHelpText>The Event related to this Room Block.</inlineHelpText>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Hotel Room Block</relationshipLabel>
    <relationshipName>Hotel_Room_Block</relationshipName>
    <type>Lookup</type>
</CustomField>