force-app/main/default/objects/conference360__Hotel_Room_Block__c/fields/conference360__Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Name__c</fullName>
    <description>The friendly name of this hotel room block. Optional.</description>
    <inlineHelpText>The friendly name of this hotel room block. Optional.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>