force-app/main/default/objects/conference360__Hotel_Room_Block__c/fields/conference360__Room_Nights_Available__c.field-meta.xml
<CustomField>
    <fullName>conference360__Room_Nights_Available__c</fullName>
    <description>Total number of Room Nights available related to this Room Block. Set and updated automatically.</description>
    <inlineHelpText>Total number of Room Nights available related to this Room Block. Set and updated automatically.</inlineHelpText>
    <label>Room Nights Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>