force-app/main/default/objects/conference360__Hotel_Room_Block__c/fields/conference360__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Start_Date__c</fullName>
    <description>The first date of availability for the Room Block.</description>
    <inlineHelpText>The first date of availability for the Room Block.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>