force-app/main/default/objects/conference360__Hotel_Room_Block__c/fields/conference360__Total_Room_Nights__c.field-meta.xml
<CustomField>
    <fullName>conference360__Total_Room_Nights__c</fullName>
    <description>The total number of nights reserved for this Room Block.</description>
    <inlineHelpText>The total number of nights reserved for this Room Block.</inlineHelpText>
    <label>Total Room Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>