force-app/main/default/objects/conference360__Hotel_Room_Block__c/listViews/conference360__All.listView-meta.xml
<ListView>
    <fullName>conference360__All</fullName>
    <columns>NAME</columns>
    <columns>conference360__Name__c</columns>
    <columns>conference360__Event__c</columns>
    <columns>conference360__Start_Date__c</columns>
    <columns>conference360__End_Date__c</columns>
    <columns>conference360__Total_Room_Nights__c</columns>
    <columns>conference360__Room_Nights_Available__c</columns>
    <columns>conference360__Room_Nights_Claimed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>